@@ -1,5 +1,8 @@
 2004-05-07  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkbutton.c (gtk_button_size_allocate): Don't let the child
+	draw over the focus rectangle.
+
 	* gtk/gtkhsv.c: Draw focus indication in the color wheel using
 	standard focus style.  (#63071, Bill Haneman, idea for new
 	style by Owen Taylor)
